SERVER-61259 Support or queries with text indexes on clustered collections