src/mongo/db/exec/plan_cache_util.h
@@ -183,7 +183,8 @@ void updatePlanCacheFromCandidates(
 
     // Store the choice we just made in the cache, if the query is of a type that is safe to
     // cache.
-    if (canCache && shouldCacheQuery(query)) {
+    QuerySolution* solution = winningPlan.solution.get();
+    if (canCache && shouldCacheQuery(query) && solution->isEligibleForPlanCache()) {
         const CollectionPtr& collection = collections.getMainCollection();
         auto rankingDecision = ranking.get();
         auto cacheClassicPlan = [&]() {
